k8s/releases/smartass-subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartass-subscriber
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartass-subscriber
  template:
    metadata:
      labels:
        app: smartass-subscriber
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: smartass-subscriber
          image: ghcr.io/lluchkaa/smartass-subscriber:latest
          volumeMounts:
            - name: state
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: smartass-subscriber-state
