k8s/releases/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web
  namespace: apps
spec:
  entryPoints:
    - pihole
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - grafana
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-web
  namespace: apps
spec:
  entryPoints:
    - temporal
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: temporal-web
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  entryPoints:
    - capacitor
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
