k8s/releases/traefik-config.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik
  namespace: apps
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-dns
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: pihole
  ingress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
  policyTypes:
    - Ingress
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web
  namespace: apps
spec:
  entryPoints:
    - pihole
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-web
  namespace: apps
spec:
  entryPoints:
    - temporal
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: temporal-web
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: apps
spec:
  entryPoints:
    - headlamp
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
